applications/base/app01/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app01-service
spec:
  selector:
    app: app01-compute
  ports:
    - name: http
      port: 80
      targetPort: http
