applications/base/app01/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app01-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: app01.example.invalid
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app01-service
                port:
                  number: 80
